--- a/index.html
+++ b/index.html
@@ -186,6 +186,6 @@
   </footer>
 
 </div>
-<script type="module" src="js/app.js"></script>
+<script type="module" src="app.js"></script>
 </body>
 </html>
